Updates to remove PMD errors.